[package]
name = "ytx-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls", "rust_decimal"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
futures = "0.3.31"
rust_decimal = "1.37.2"